third_party/rust/time/tests/integration/compile-fail/invalid_serializer.rs
use time::serde;

serde::format_description!(); 
serde::format_description!("bad string", OffsetDateTime, "[year] [month]"); 
serde::format_description!(my_format: OffsetDateTime, "[year] [month]"); 
serde::format_description!(my_format,); 
serde::format_description!(my_format, "[year] [month]"); 
serde::format_description!(OffsetDateTime, "[year] [month]"); 
serde::format_description!(my_format, OffsetDateTime); 
serde::format_description!(my_format, OffsetDateTime,); 
serde::format_description!(my_format, OffsetDateTime "[year] [month]"); 
serde::format_description!(my_format, OffsetDateTime : "[year] [month]"); 
serde::format_description!(my_format, OffsetDateTime, "[bad]"); 
serde::format_description!(my_format, OffsetDateTime, not_string); 

fn main() {}
